# mlx

./: .gitignore  LICENSE  README.md
.claude-plugin/: plugin.json
agents/: ai-engineer.md  (+7 more)
skills/learn/courses/applied-ml/: pyproject.toml
skills/learn/courses/applied-ml/module1/: MODULE_INDEX.md
skills/learn/courses/applied-ml/module1/readings/: algorithmic_bias_lipton.html
skills/learn/courses/applied-ml/module1/videos/: 02_whats_new_transcript.txt  04_python_tools_transcript.txt  05_example_ml_problem_transcript.txt  07_knn_classification_transcript.txt
skills/learn/courses/applied-ml/module2/: MODULE_INDEX.md
skills/learn/courses/applied-ml/module2/readings/: ed_yong_autism_test.html
skills/learn/courses/applied-ml/module2/videos/: 05_linear_regression_least_squares_transcript.txt  06_ridge_lasso_polynomial_transcript.txt  11_cross_validation_transcript.txt  13_one_hot_encoding_transcript.txt
skills/learn/courses/applied-ml/module3/: MODULE_INDEX.md
skills/learn/courses/applied-ml/module3/videos/: 02_confusion_matrices_transcript.txt  04_precision_recall_roc_transcript.txt  05_multi_class_evaluation_transcript.txt  07_model_selection_transcript.txt  08_model_calibration_transcript.txt
skills/learn/courses/applied-ml/module4/: MODULE_INDEX.md
skills/learn/courses/applied-ml/module4/readings/: clustering_algorithms_intro.html  deep_learning_nutshell_nvidia.html  google_rules_of_ml.html  how_to_use_tsne_effectively.html  kaggle_leakage.html  tensorflow_playground_link.txt
skills/learn/courses/applied-ml/notebooks/: Machine_Learning_Models.ipynb
(+153 files in other folders)
