# Applied Machine Learning in Python - Course Dependencies
# Use: uv sync

[project]
name = "applied-ml-python"
version = "1.0.0"
description = "University of Michigan - Applied Machine Learning in Python Course"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "joblib>=1.3.0",
    "graphviz>=0.20.0",
]

